--- a/resources/views/anime_list.edge
+++ b/resources/views/anime_list.edge
@@ -13,12 +13,14 @@
             <p><span class="ui red label">!!!คำเตือน!!!</span> การรีวิวและคะแนนแต่ละเรื่องมาจากความคิดเห็นของผู้เขียนเท่านั้น ซึ่งอาจมีความคิดที่ไม่ตรงกับคนอื่นๆ เรื่องไหนที่คุณคิดว่าสนุกเรืองนั้นแหละสนุกสำหรับคุณ ☺☺</p>
         </div>
     </div>
-    @if(auth.isAuthenticated) 
-    <div class="ui container text-center mt-5">
-        <a class="ui huge green circular icon button" href="{{route('anime.create')}}">
-            <i class="plus icon"></i> เพิ่ม
-        </a>
-    </div>
+    @if(auth.isAuthenticated)
+        @can('AnimePolicy.create') 
+        <div class="ui container text-center mt-5">
+            <a class="ui huge green circular icon button" href="{{route('anime.create')}}">
+                <i class="plus icon"></i> เพิ่ม
+            </a>
+        </div>
+        @end
     @end
 
     <div class="ui container mt-5">
@@ -32,15 +34,17 @@
                     </a>
                 </div>
                 <div class="content">
-                    @if(auth.isAuthenticated) 
-                    <div class="absolute top-0 right-0 mt-3 mr-3">
-                        <a class="ui icon button blue" href="{{route('anime.edit', [anime.id])}}">
-                            <i class="edit icon"></i>
-                        </a>
-                        <a class="ui icon button red delbutton" data-id="{{anime.id}}">
-                            <i class="trash icon"></i>
-                        </a>
-                    </div>
+                    @if(auth.isAuthenticated)
+                        @can('AnimePolicy.edit') 
+                        <div class="absolute top-0 right-0 mt-3 mr-3">
+                            <a class="ui icon button blue" href="{{route('anime.edit', [anime.id])}}">
+                                <i class="edit icon"></i>
+                            </a>
+                            <a class="ui icon button red delbutton" data-id="{{anime.id}}">
+                                <i class="trash icon"></i>
+                            </a>
+                        </div>
+                        @end
                     @end
                     <h2 class="header w-10/12">
                         <a href="{{route('anime.show', [anime.id])}}">{{ anime.nameEN }}</a>
