--- a/resources/views/partials/footer.edge
+++ b/resources/views/partials/footer.edge
@@ -1,4 +1,4 @@
-<footer class="mt-28">
+<footer class="mt-auto">
     <div class="bg-yellow-50">
         <div class="flex items-center justify-between">
             <img src="/images/template/bottom2.png" alt="anime2">
@@ -7,5 +7,4 @@
         </div>
     </div>
 </footer>
-
 
