--- a/resources/views/components/layouts/master.edge
+++ b/resources/views/components/layouts/master.edge
@@ -35,7 +35,7 @@
         @include('partials/navbar')
     @end
 
-    <div class="ui container mt-28" id="main">
+    <div class="ui container mt-28 mb-28" id="main">
         {{{ await $slots.main() }}}
     </div>
 
