fix component & picture

--- a/resources/views/anime_detail.edge
+++ b/resources/views/anime_detail.edge
@@ -34,13 +34,9 @@
   <div class="absolute top-0 right-0 mt-3 mr-3 flex flex-col items-end space-y-4">
     @if(auth.isAuthenticated) 
       @can('AnimePolicy.edit') 
-      <div class="lex flex-col items-end">
-        <a class="ui icon button blue" href="{{route('anime.edit', [anime.id])}}">
-            <i class="edit icon"></i>
-        </a>
-        <a class="ui icon button red delbutton" data-id="{{anime.id}}">
-            <i class="trash icon"></i>
-        </a>
+      <div class="flex-col items-end">
+        @!editButton({action: route('anime.edit', [anime.id])})
+        @!deleteButton({data: anime.id})
       </div>
       @end
     @end
